[gd_scene load_steps=10 format=2]

[ext_resource path="res://uires/hud_gauge_numeric/hud_gauge_numeric.tscn" type="PackedScene" id=1]
[ext_resource path="res://uires/hud_shared/hud_shared.gd" type="Script" id=2]
[ext_resource path="res://addons/virtual-joystick/joystick/virtual_joystick.tscn" type="PackedScene" id=3]
[ext_resource path="res://uires/hud_gauge_custom/hud_gauge_custom.tscn" type="PackedScene" id=4]
[ext_resource path="res://uires/menu_pause/menu_pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://uires/hud_shared/hud_shared_theme.tres" type="Theme" id=6]
[ext_resource path="res://uires/minimap/minimap.tscn" type="PackedScene" id=7]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUDShared" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GaugeSPD" parent="." instance=ExtResource( 1 )]
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.3
grow_horizontal = 2
label_displayed = "SPD"

[node name="GaugeBAT" parent="." instance=ExtResource( 1 )]
anchor_left = 0.45
anchor_top = 0.1
anchor_right = 0.55
anchor_bottom = 0.3
grow_horizontal = 2
label_displayed = "BAT"
value_displayed = 100.0
value_maximum = 100.0
value_minimum = 0.0

[node name="GaugeALT" parent="." instance=ExtResource( 1 )]
anchor_left = 0.9
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.3
grow_horizontal = 2
label_displayed = "ALT"

[node name="GaugeVVT" parent="." instance=ExtResource( 4 )]
anchor_top = 0.6
anchor_right = 0.1
anchor_bottom = 0.6
grow_horizontal = 2
theme = null
label_displayed = "VVT"
value_format_string = "%+0.1f"

[node name="GaugeVVI" parent="." instance=ExtResource( 4 )]
anchor_left = 0.9
anchor_top = 0.6
anchor_right = 0.9
anchor_bottom = 0.6
margin_right = 180.0
margin_bottom = 150.0
grow_horizontal = 2
label_displayed = "VVI"
value_format_string = "%+0.1f"

[node name="UI" type="CanvasLayer" parent="."]

[node name="VJoyLeft" parent="UI" instance=ExtResource( 3 )]
modulate = Color( 0.196078, 0.196078, 0.196078, 0.196078 )
clampzone_size = 100.0
action_left = "yaw_left"
action_right = "yaw_right"
action_up = "throttle_up"
action_down = "throttle_down"

[node name="VJoyRight" parent="UI" instance=ExtResource( 3 )]
modulate = Color( 0.196078, 0.196078, 0.196078, 0.196078 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_right = -50.0
clampzone_size = 100.0
action_left = "roll_left"
action_right = "roll_right"
action_up = "pitch_down"
action_down = "pitch_up"

[node name="MenuPause" parent="." instance=ExtResource( 5 )]
visible = false

[node name="ButtonPause" type="Button" parent="."]
pause_mode = 2
anchor_right = 0.15
grow_horizontal = 2
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "PAUSE"

[node name="ButtonCamera" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.85
anchor_right = 1.0
grow_horizontal = 2
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "CAMERA"

[node name="ButtonWptDec" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.3
anchor_right = 0.4
grow_horizontal = 2
shortcut_in_tooltip = false
text = "<<"

[node name="ButtonWptDisp" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.4
anchor_right = 0.6
grow_horizontal = 2
toggle_mode = true
shortcut_in_tooltip = false
keep_pressed_outside = true
text = "WPT XX"

[node name="ButtonWptInc" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.6
anchor_right = 0.7
grow_horizontal = 2
shortcut_in_tooltip = false
text = ">>"

[node name="Minimap" parent="." instance=ExtResource( 7 )]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -125.0
margin_top = -250.0
margin_right = 125.0
margin_bottom = 0.0

[node name="Messages" type="Label" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -507.0
margin_top = -73.0
margin_right = 507.0
text = "NO CAS MSGS
REACH WPT XX
000 SEC LEFT
"
align = 1
clip_text = true

[connection signal="pressed" from="ButtonPause" to="." method="_on_ButtonPause_pressed"]
[connection signal="pressed" from="ButtonWptDec" to="." method="_on_ButtonWptDec_pressed"]
[connection signal="pressed" from="ButtonWptInc" to="." method="_on_ButtonWptInc_pressed"]
